# sandtable

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
doc/: increment2_design.md
experiments/: empirical.md
experiments/analysis/: analyze_morris.py  analyze_span_control.py  analyze_sweep.py  collect_results.py  lanchester_check.py  probe_span_control.py
experiments/results/: numbers.txt
report/: main.tex  ref.bib
report/data/: bayes_te_contrast.csv  bayes_te_intervals.csv  bayes_te_paths.csv  bayes_te_prior.csv  bayes_te_prior_curve.csv  (+13 more)
scenarios/: sc_span_control.json  uc3_route_defilade.json  uc5_sensor_swarm.json  uc7_spoofed_advance.json
studies/: README.md  centerpiece_direct_hopper.yaml  centerpiece_supervisory_hopper.yaml  sc_sweep_direct.yaml  sc_sweep_supervisory.yaml  uc3_bo.yaml  uc3_frontier_hopper.yaml  uc3_morris.yaml  uc3_sweep.yaml  uc3_sweep_hopper.yaml  uc5_swarm_jam_hopper.yaml
tests/: conftest.py  test_bayes_te.py  test_belief.py  test_c2.py  test_comms_ew.py  test_counter_uas.py  test_engagement.py  test_entities.py  test_ew_immune.py  test_mechanics.py  test_metrics.py  test_motion.py  test_personality.py  test_planning.py  test_plugin_metric.py  test_replay.py  test_runner.py  test_seeding.py  test_sensing.py  test_sensitivity_gate.py  test_sim_repro.py  test_span_scenario.py  test_world.py
tools/: lanchester_check.py  make_bayes_te_numbers.py  make_belief_numbers.py  make_diagrams.py  make_drone_numbers.py  make_figures.py  make_killweb_numbers.py  make_numbers.py  make_personality_numbers.py  make_player.py  make_viz.py
(+26 files in other folders)
