[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandtable"
version = "0.1.0"
description = "Mission-level GL: a lightweight Python mission-design simulator for autonomy-enabled ground/air formations (FP6111 / VIPR-GS)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Vadim Sokolov", email = "vsokolov@gmu.edu" },
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
# Performance path (optional; core runs on pure NumPy)
fast = ["numba>=0.59"]
# Routing / graph utilities
graph = ["networkx>=3.0", "scikit-image>=0.22"]
# Plotting for the report
viz = ["matplotlib>=3.7"]
# Optimization driver (installed from git; not on PyPI). The [bo] extra of polarisopt pulls torch.
opt = ["polarisopt"]
dev = ["pytest>=7", "ruff", "matplotlib>=3.7", "networkx>=3.0"]

# polarisopt discovers these by importing the module (the module's import registers the plugin).
[project.entry-points."polarisopt.simulators"]
mission = "sandtable.plugin"

[project.entry-points."polarisopt.metrics"]
mission_kpi = "sandtable.opt_metrics"

[tool.hatch.build.targets.wheel]
packages = ["src/sandtable"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
